package NYT.NSecurityServer.NProto;

import "yt/core/misc/proto/guid.proto";

////////////////////////////////////////////////////////////////////////////////

message TClusterResources
{
    required int64 chunk_count = 2;
    required int64 node_count = 3;
    required int32 tablet_count = 5;
    required int64 tablet_static_memory_size = 6;
    required int64 master_memory = 7;

    message TMediumDiskSpace
    {
        required int32 medium_index = 1;
        required int64 disk_space = 2;
    }

    repeated TMediumDiskSpace disk_space_per_medium = 4;
}

message TAccountStatistics
{
    required TClusterResources resource_usage = 1;
    required TClusterResources committed_resource_usage = 2;
}

////////////////////////////////////////////////////////////////////////////////

message TReqSetAccountStatistics
{
    message TEntry
    {
        required NYT.NProto.TGuid account_id = 1;
        required TAccountStatistics statistics = 2;
    }

    required int32 cell_tag = 1;
    repeated TEntry entries = 2;
}

////////////////////////////////////////////////////////////////////////////////

message TReqRecomputeMembershipClosure
{ }

////////////////////////////////////////////////////////////////////////////////

message TReqUpdateAccountMasterMemoryUsage
{
    message TUpdateEntry
    {
        required NYT.NProto.TGuid account_id = 1;
        required int64 master_memory_usage = 2;
    }
    repeated TUpdateEntry entries = 1;
}

////////////////////////////////////////////////////////////////////////////////
