syntax = "proto2";

package NYT.NSecurityClient.NProto;

////////////////////////////////////////////////////////////////////////////////

message TReqTransferAccountResources
{
    required string src_account = 1;
    required bytes resource_delta = 2;
}

message TRspTransferAccountResources
{ }

////////////////////////////////////////////////////////////////////////////////
